# spaceitup-ros

./: .gitmodules  README.md
demos/curiosity_rover/: README.md
demos/curiosity_rover/curiosity_gazebo/launch/: mars_sample_return.launch.py
demos/curiosity_rover/curiosity_gazebo/models/sample_cache/: model.config  model.sdf
demos/curiosity_rover/curiosity_gazebo/worlds/: mars_sample_return.world
docker/moveit2/: moveit2_tutorials.repos
docker/space_robots/: Dockerfile  build.sh  demo_manual_pkgs.repos  run.sh
mission_spec/: README.md
mission_spec/mars_rover_nav/: package.xml  setup.cfg  setup.py
mission_spec/mars_rover_nav/mars_rover_nav/: mars_rover_navigation_server.py  mock_navigation_server.py
mission_spec/py_trees_bt_runner/: package.xml  setup.cfg  setup.py
mission_spec/py_trees_bt_runner/py_trees_bt_runner/: bt_runner_node.py  bt_runner_node_dynamic.py
mission_spec/py_trees_bt_runner/py_trees_bt_runner/behaviours/: mars_rover_behaviours.py
mission_spec/py_trees_bt_runner/py_trees_bt_runner/utils/: node_factory.py  xml_bt_parser.py
mission_spec/trees/: inspection_mission.xml  sample_return_mission.xml  test_tree.xml
