<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>py_trees_bt_runner</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="gianluca.filippone@gssi.it">Gianluca Filippone</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>py_trees</depend>
  <depend>py_trees_ros</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
